# st-tailwind

./: .editorconfig  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
src/st_tailwind/: __init__.py  classful.js  classful.min.js  core.py
st_tailwind/: const.py  core.py
st_tailwind/resources/frontend/: add.js  add.min.js  init.js  init.min.js
tests/: app.py  examples.py  run_app.py  test_classful.py
